--- a/metronome_app/package.json
+++ b/metronome_app/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
+  },
+  "jest":{
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
